--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+html {
+    width: 100%;
+    height: 100%;
+}
+
 body{
-    background:linear-gradient( 180deg,#3EFFD4 7%,#3262FF 77%)
+    width: 100%;
+    height: 100%;
+    background:linear-gradient( 180deg,#3EFFD4 7%,#3262FF 77%);
 }
