--- a/style.css
+++ b/style.css
@@ -1,10 +1,113 @@
-html {
-    width: 100%;
-    height: 100%;
+body{
+    background-image: url("https://static.vecteezy.com/system/resources/previews/008/889/844/non_2x/quiz-set-in-doodle-style-illustration-icon-question-symbol-for-print-and-design-quiz-and-exam-concept-isolated-element-on-black-background-collection-of-sign-for-school-and-event-vector.jpg");
 }
 
-body{
-    width: 100%;
-    height: 100%;
-    background:linear-gradient( 180deg,#3EFFD4 7%,#3262FF 77%);
+#question-text{
+    text-align: center;
+    color:#faf0d9;
+    font-family: 'Times New Roman';
+    font-size: 40px;
+    font-weight: bold;
+    margin-top: 50px;
+    background-color: #777777;
+    opacity: 0.9;
 }
+
+#options-container:nth-child(-n + 4) {
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        align-items: center;
+        flex-grow: 1;
+        gap: 1.5rem;
+        margin-top: 50px;
+        margin-left: 100px;
+  }
+
+.option {
+        box-shadow:inset 0px 1px 0px 0px #ffffff;
+        background-color:#ededed;
+        border-radius:6px;
+        border:1px solid #dcdcdc;
+        display:inline-block;
+        cursor:pointer;
+        color:#777777;
+        font-family:Arial;
+        font-size:15px;
+        font-weight:bold;
+        padding:6px 24px;
+        text-decoration:none;
+        text-shadow:0px 1px 0px #ffffff;
+        width: 600px;
+        height: 50px;
+    }
+
+
+    .option:hover {
+        background-color:#dfdfdf;
+    }
+
+
+    .option.right {
+        background-color: green;
+    }
+
+    .option.wrong {
+        background-color: red;
+    }
+
+
+    .option:active {
+        position:relative;
+        top:1px;
+    }
+
+
+    #next-button:nth-child(-n + 1){
+        box-shadow:inset 0px 1px 0px 0px #ffffff;
+        background-color:#ededed;
+        border-radius:6px;
+        border:1px solid #dcdcdc;
+        display:inline-block;
+        cursor:pointer;
+        color:#777777;
+        font-family:Arial;
+        font-size:15px;
+        font-weight:bold;
+        padding:6px 24px;
+        text-decoration:none;
+        text-shadow:0px 1px 0px #ffffff;
+        width: 100px;
+        height: 30px;
+        margin-left: 46.75%;
+        margin-top: 4%;
+    }
+
+    #replay-button{
+        box-shadow:inset 0px 1px 0px 0px #ffffff;
+        background-color:#ededed;
+        border-radius:6px;
+        border:1px solid #dcdcdc;
+        display:inline-block;
+        cursor:pointer;
+        color:#777777;
+        font-family:Arial;
+        font-size:15px;
+        font-weight:bold;
+        padding:6px 24px;
+        text-decoration:none;
+        text-shadow:0px 1px 0px #ffffff;
+        width: 100px;
+        height: 30px;
+        margin-left: 46%;
+        margin-top: 4%;
+    }
+
+    #afficheScore{
+        /* margin-left: 46%; */
+        margin-top: 50px;
+        text-align:center;
+        color: #a83f62;
+        font-family: arial;
+        font-size: 25px;
+        font-weight: bold;
+    }
