--- a/style.css
+++ b/style.css
@@ -78,8 +78,8 @@ body{
         text-shadow:0px 1px 0px #ffffff;
         width: 100px;
         height: 30px;
-        margin-left: 46.75%;
-        margin-top: 4%;
+        margin: auto;
+        margin-top: 100px;
     }
 
     #replay-button{
@@ -98,12 +98,10 @@ body{
         text-shadow:0px 1px 0px #ffffff;
         width: 100px;
         height: 30px;
-        margin-left: 46%;
-        margin-top: 4%;
+        margin:auto;
     }
 
     #afficheScore{
-        /* margin-left: 46%; */
         margin-top: 50px;
         text-align:center;
         color: #a83f62;
