--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     margin-top: 50px;
     background-color: #777777;
     opacity: 0.9;
+    border: #ffffff solid 3px;
 }
 
 #options-container:nth-child(-n + 4) {
@@ -48,11 +49,11 @@ body{
 
 
     .option.right {
-        background-color: green;
+        background-color: #b8fcad;
     }
 
     .option.wrong {
-        background-color: red;
+        background-color: #f86b64;
     }
 
 
@@ -108,4 +109,7 @@ body{
         font-family: arial;
         font-size: 25px;
         font-weight: bold;
+        background-color: #777777;
+        opacity: 0.9;
+        border: #ffffff solid 3px;
     }
