[CHANGE] display on screen

--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ body{
         align-items: center;
         flex-grow: 1;
         gap: 1.5rem;
-        margin-top: 50px;
-        margin-left: 100px;
+        margin-top: 4%;
+        margin-left: 11%;
   }
 
 .option {
